--- a/style.css
+++ b/style.css
@@ -4,15 +4,19 @@ html {
 
 h1 {
   text-align: center;
+  margin: 60px 0px;
 }
+
 body {
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center;  */
+  /* display: flex; */
 }
+
 #container {
   display: flex;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 10px;
 }
 
 table {
@@ -21,7 +25,32 @@ table {
 }
 
 .cell {
-  border-style: outset;
+  border-style: solid;
+  border-width: 2px;
   border-color: black;
   text-align: center;
+}
+
+/* .cell:hover {
+  background-color: rgb(56, 108, 91);
+  transition-duration: 50ms;
+}
+
+.cell:hover::after {
+  background-color: rgb(56, 108, 91);
+} */
+
+.fill {
+  background-color: rgb(56, 108, 91);
+}
+
+.reset {
+  display: block;
+  font-size: 15px;
+  background-color: aliceblue;
+  border-style: solid;
+  border-radius: 7px;
+  width: 100px;
+  height: 50px;
+  margin: 0 auto;
 }
