--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {
   text-align: center;
   font-family: "Rampart One", cursive;
   font-size: 50px;
-  margin: 60px 0px;
+  margin: 30px 0px;
 }
 
 h3 {
@@ -24,7 +24,9 @@ video {
 #container {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  justify-self: center;
+  width: 600px;
+  margin: 10px auto 0 auto;
 }
 
 #content {
@@ -50,7 +52,7 @@ table {
 
 .cell {
   width: auto;
-  height: 20px;
+  height: auto;
   border-top: 1px solid black;
   border-right: 1px solid black;
   text-align: center;
@@ -67,7 +69,7 @@ table {
 .reset {
   height: 56px;
   display: block;
-  font-size: 15px;
+  font-size: 18px;
   font-family: "Verdana", sans-serif;
   width: 100px;
 }
@@ -85,4 +87,35 @@ input#colorWheel {
   width: 35px;
   height: 35px;
   padding: 0;
+}
+
+#size-settings {
+  margin: 10px auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 500px;
+}
+
+#size-settings div {
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border: solid 3px rgb(109, 84, 63);
+  border-radius: 7px;
+  background-color: rgba(211, 203, 192, 0.65);
+}
+
+#size-settings div:hover {
+  cursor: pointer;
+}
+
+h2 {
+  font-size: 28px;
+  font-family: "Rampart One", cursive;
+  background-color: rgba(211, 203, 192, 0.65);
+  border: solid 3px rgb(109, 84, 63);
+  border-radius: 7px;
+  width: 200px;
+  margin: 10px auto 0px auto;
+  justify-self: center;
 }
